# APGMS-Final

./: .dockerignore  .env.example  .eslintrc.cjs  .gitattributes  .gitignore  .gitleaks.toml  .mailmap  .markdownlint.json  .npmrc  .part1.txt  .part10.txt  .part11.txt  .part12.txt  .part13.txt  .part14.txt  .part15.txt  .part16.txt  .part17.txt  .part18.txt  .part19.txt  .part2.txt  .part20.txt  .part3.txt  .part4.txt  .part5.txt  .part6.txt  .part7.txt  .part8.txt  .part9.txt  .trivyignore  20251101_add_payroll.sql  AGENTS.md  CODEOWNERS  DEMO_RUNBOOK.md  Deterministic-Train-And-Verify.ps1  Dockerfile  Dockerfile.local-built  Dockerfile.txt  Export-CodeDumpPdf.ps1  Export-FolderTree.ps1  (+53 more)
apgms-ml/: README.md  pyproject.toml
apgms-ml/apportion/: README.md  eval.py  train.py
apgms-ml/bas_conf/: README.md  eval.py  train.py
apgms-ml/common/: explain.py  io.py  metrics.py  thresholds.py
apgms-ml/dups/: README.md  eval.py  train.py
apgms-ml/gstfree/: README.md  eval.py  train.py
apgms-ml/paygw_var/: README.md  eval.py  train.py
apgms-ml/scripts/: Promote-Model.ps1  Shadow-Smoke.ps1  Train-All.ps1
apgms-ml/server/: main.py
services/ml-service/: Dockerfile  main.py  package.json  pyproject.toml  requirements.txt  tsconfig.json
services/ml-service/app/: __init__.py  main.py  model_loader.py  models.py  schemas.py
services/ml-service/artifacts/: model.onnx
services/ml-service/checksums/: model.onnx.sha256
services/ml-service/model/: manifest.json
services/ml-service/models/: catalog.json  compliance-plan.json  fraud-model.json  fraud.json  manifest.json  (+7 more)
(+2035 files in other folders)
