[project]
name = "apgms-ml"
version = "0.1.0"
description = "Placeholder classical models for APGMS non-QA workloads."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy==1.26.4",
  "pandas==2.1.4",
  "scikit-learn==1.3.2",
  "lightgbm==4.1.0",
  "joblib==1.3.2",
  "scipy==1.11.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
