[project]
name = "apgms-ml-service"
version = "0.1.0"
description = "Risk scoring microservice for APGMS platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "prometheus-client>=0.20.0"
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
